# KanchoNet

./: .gitignore  CMakeLists.txt  KanchoNet.sln  README.md  build.bat  build.sh
Examples/: CMakeLists.txt
Examples/ChatServer/: ChatProtocol.h  ChatServer.cpp  ChatServer.h  ChatServer.vcxproj  ChatServer.vcxproj.filters  main.cpp
Examples/EchoServer/: EchoServer.cpp  EchoServer.h  EchoServer.vcxproj  EchoServer.vcxproj.filters  main.cpp
Examples/ProtobufServer/: ProtobufServer.cpp  ProtobufServer.h  ProtobufServer.vcxproj  ProtobufServer.vcxproj.filters  main.cpp
Examples/ProtobufServer/Proto/: game_message.proto
KanchoNet/: CMakeLists.txt  KanchoNet.h  KanchoNet.vcxproj  KanchoNet.vcxproj.filters  Platform.h  Types.h
KanchoNet/Buffer/: BufferPool.cpp  BufferPool.h  PacketBuffer.cpp  PacketBuffer.h  RingBuffer.cpp  RingBuffer.h
KanchoNet/Core/: EngineConfig.cpp  EngineConfig.h  INetworkModel.h  NetworkEngine.cpp  NetworkEngine.h
KanchoNet/Network/: EpollModel.cpp  EpollModel.h  IOCPModel.cpp  IOCPModel.h  IOUringModel.cpp  IOUringModel.h  RIOModel.cpp  RIOModel.h  SocketUtils.cpp  SocketUtils.h
KanchoNet/Session/: Session.cpp  Session.h  SessionConfig.cpp  SessionConfig.h  SessionManager.cpp  SessionManager.h
KanchoNet/Utils/: Logger.cpp  Logger.h  NonCopyable.h  SpinLock.cpp  SpinLock.h
